# This file is part of rust1. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rust1/master/COPYRIGHT. No part of rust1, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of rust1. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rust1/master/COPYRIGHT.

[package]
name = "try-finally"
description = "Provides cleanup after a panic, like Java's try-finally"
keywords = ["try", "finally", "unwind", "propagate", "recover", "catch"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/rust1/blob/master/README.md"
homepage = "https://github.com/lemonrock/rust1"
repository = "https://github.com/lemonrock/rust1.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"
