# This file is part of try-finally. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/try-finally/master/COPYRIGHT. No part of try-finally, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of try-finally. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/try-finally/master/COPYRIGHT.

[package]
name = "try-finally"
description = "Provides cleanup after a panic, like Java's try-finally"
keywords = ["try", "finally", "unwind", "propagate", "recover", "catch"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/try-finally/blob/master/README.md"
homepage = "https://github.com/lemonrock/try-finally"
repository = "https://github.com/lemonrock/try-finally.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"
